@@ -102,11 +102,7 @@ void GWEN_Logger_AddLogger(GWEN_LOGGER *oldLogger, GWEN_LOGGER *newLogger);
  * GWEN_Logger_Open on that logger prior to calling this function.
  */
 GWENHYWFAR_API
-void GWEN_Logger_SetDefaultLogger(GWEN_LOGGER *lg) 
-#ifdef __GNUC__
-       __attribute__((deprecated))
-#endif /* __GNUC__ */
-       ;
+void GWEN_Logger_SetDefaultLogger(GWEN_LOGGER *lg) DEPRECATED ;
 
 
 /**
